2006-05-30 John Cliff <simarilius@yahoo.com>
	src/trace/potrace/inkscape-potrace.cpp
	Changed bitsPerSample from hardcoded to calculated for multi color traces
	to fix bugs 1188811 and 1484076

2006-05-29  Jon A. Cruz  <jon@joncruz.org>

	* src/xml/repr-io.cpp:
	Changed to strip leading BOM from input.
	Fixes bug# 1121666.

2006-05-29  Bryce <bryce@bryceharrington.org>
	* sp-shape.cpp:  Adding documentation

2006-05-29  Jon A. Cruz  <jon@joncruz.org>

	* src/desktop.cpp, src/layer-manager.cpp, src/dialogs/layers-panel.cpp:
	Workaround to avoid assertion upon file revert.

2006-05-28  Bryce <bryce@bryceharrington.org>
	* sp-marker.cpp:  Adding documentation

2006-05-28  MenTaLguY  <mental@rydia.net>

	* src/dialogs/clonetiler.cpp, src/dialogs/iconpreview.cpp,
	  src/dialogs/stroke-style.cpp, src/display/curve.cpp,
	  src/display/sp-canvas.cpp, src/dyna-draw-context.cpp,
	  src/extension/internal/gnome.cpp, src/extension/internal/pdf.cpp,
	  src/extension/internal/ps.cpp, src/extension/internal/win32.cpp,
	  src/file.cpp, src/inkview.cpp, src/libnr/nr-macros.h,
	  src/libnr/nr-object.cpp, src/libnr/nr-path.cpp,
	  src/libnr/nr-pixblock.cpp, src/libnr/nr-pixblock-pattern.cpp,
	  src/libnr/nr-svp.cpp, src/libnr/nr-svp-render.cpp,
	  src/libnrtype/FontFactory.cpp, src/libnrtype/Layout-TNG-Output.cpp,
	  src/libnrtype/nr-type-primitives.cpp, src/path-chemistry.cpp,
	  src/splivarot.cpp, src/sp-marker.cpp, src/ui/widget/icon-widget.cpp,
	  src/widgets/icon.cpp:

	  replace nr_new() with g_new(), and try to converge on using the
	  glib allocator a little more instead of the others (aside from
	  libgc)

2006-05-28  MenTaLguY  <mental@rydia.net>

	* share/icons/icons.svg:

	  correct vertical text flow icon to  correctly reflect lines stacking
	  right-to-left, as well as improving pixel alignment on both text flow
	  icons

2006-05-28  MenTaLguY  <mental@rydia.net>

	* src/widgets/toolbox.cpp:

	  add tooltips to text toolbar widgets
